cadastro de produto

--- a/src/app/sistema/estoque/fornecedores/fornecedores.component.html
+++ b/src/app/sistema/estoque/fornecedores/fornecedores.component.html
@@ -72,4 +72,4 @@
 
 <app-view-fornecedor></app-view-fornecedor>
 <app-edit-fornecedor></app-edit-fornecedor>
-<app-adicionar-fornecedores></app-adicionar-fornecedores>
+<app-adicionar-fornecedores (reload)="getFornecedores()"></app-adicionar-fornecedores>
