--- a/src/app/sistema/estoque/produtos/produtos.component.html
+++ b/src/app/sistema/estoque/produtos/produtos.component.html
@@ -25,7 +25,7 @@
 
   <!-- Adicionar produtos -->
   <div class="col-1 px-2 p-0 m-0 text-center">
-    <a class="px-2 py-2"  data-bs-toggle="modal" data-bs-target="#adicionarProdutos">
+    <a class="px-2 py-2" data-bs-toggle="modal" data-bs-target="#adicionarProdutos">
       <i class="bi-plus-square-fill icon-view my-auto fs-3 p-2 m-0 fw-bold text-custom-dark"></i>
     </a>
   </div>
@@ -59,27 +59,28 @@
 <!-- Tabela -->
 <div class="row m-0 mt-3 border-bottom text-custom-dark justify-content-center" *ngFor="let produto of produtos">
   <div class="col-1">
-    <p>{{ produto.codigo }}</p>
+    <p>{{ produto.id }}</p>
   </div>
   <div class="col-2">
     <p>{{ produto.nome }}</p>
   </div>
   <div class="col-2">
-    <p>{{ produto.estoque }} un.</p>
+    <p>{{ produto.atual }} un.</p>
   </div>
   <div class="col-2">
-    <p>{{ produto.custo | currency:'BRL' }} un.</p>
+    <p>{{ produto.custoMedio | currency:'BRL' }} un.</p>
   </div>
   <div class="col-2">
-    <p>{{ produto.venda | currency:'BRL' }} un.</p>
+    <p>{{ produto.precoMedio | currency:'BRL' }} un.</p>
   </div>
   <div class="col-1">
-    <p>{{ produto.margem }}%</p>
+    <p>{{ produto.margemLucro }}%</p>
   </div>
   <div class="col-2 text-end">
-    <i class="fs-5 bi-eye-fill icon-view p-3" cursor="pointer"></i>
+    <i class="fs-5 bi-eye-fill icon-view p-3" (click)="selectProduto(produto)" data-bs-toggle="modal" data-bs-target="#viewProdutos" cursor="pointer"></i>
     <i class="fs-5 bi-pen-fill icon-edit p-3" cursor="pointer"></i>
   </div>
 </div>
 
-<app-adicionar-produtos></app-adicionar-produtos>
+<app-adicionar-produtos (reload)="getProdutos()"></app-adicionar-produtos>
+<app-view-produto [produto]="produto"></app-view-produto>
