--- a/src/app/sistema/expedicao/cadastro/cadastro-veiculo/cadastrar-veiculo/cadastrar-veiculo.component.html
+++ b/src/app/sistema/expedicao/cadastro/cadastro-veiculo/cadastrar-veiculo/cadastrar-veiculo.component.html
@@ -106,7 +106,7 @@
 
             <!-- Capacidade Kg-->
             <div class="col-3 px-2 pt-4 p-0 m-0 form-floating">
-              <input formControlName="capacidade" mask="000000" suffix=" Kg"
+              <input formControlName="capacidade" mask="0 || 00 || 000 || 0000 || 00000 || 000000" suffix=" Kg"
               class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text"
               placeholder="Capacidade Kg">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Capacidade Kg</label>
@@ -115,7 +115,7 @@
 
             <!-- Tara Kg-->
             <div class="col-3 px-2 pt-4 p-0 m-0 form-floating">
-              <input formControlName="tara" mask="000000" suffix=" Kg"
+              <input formControlName="tara" mask="0 || 00 || 000 || 0000 || 00000 || 000000" suffix=" Kg"
               class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text"
               placeholder="Tara Kg">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Tara Kg</label>
@@ -124,7 +124,7 @@
 
             <!-- Capacidade M³ -->
             <div class="col-3 px-2 pt-4 p-0 m-0 form-floating">
-              <input formControlName="capacidadeM3" mask="000000" suffix=" M³"
+              <input formControlName="capacidadeM3"  mask="0 || 00 || 000 || 0000 || 00000 || 000000" suffix=" M³"
               class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text"
               placeholder="Capacidade M³">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Capacidade M<sup>3</sup></label>
