--- a/src/app/sistema/rh/controle-vt/controle-vt.component.html
+++ b/src/app/sistema/rh/controle-vt/controle-vt.component.html
@@ -54,7 +54,7 @@
                             </div>
                             <div class="col row h3 m-0 p-0 border border-1 border-custom-dark">
                                 <div class="p-0 m-0 form-floating">
-                                    <input formControlName="valorTotal"
+                                    <input formControlName="originalTotal"
                                     class="form-control form-control-lg shadow-sm" type="text"
                                     placeholder="Dias trabalhados" readonly>
                                 </div>
