--- a/src/app/sistema/rh/editar-colaborador/editar-colaborador.component.html
+++ b/src/app/sistema/rh/editar-colaborador/editar-colaborador.component.html
@@ -220,6 +220,22 @@
                   <label class="ms-2 mt-3 small text-truncate text-custom-dark">CNH</label>
                 </div>
 
+
+                 <!-- categoria CNH -->
+                 <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
+                  <select formControlName="categoriaCnh"
+                  class="form-select form-select-lg h-limited px-4 py-3 rounded-15 shadow-sm text-custom-dark" type="text"
+                  placeholder="Categoria CNH">
+                    <option value="" disabled selected>Categoria CNH</option>
+                    <option value="A">A</option>
+                    <option value="B">B</option>
+                    <option value="C">C</option>
+                    <option value="E">E</option>
+                  </select>
+                  <label class="ms-2 mt-3 small text-truncate text-custom-dark">Categoria CNH</label>
+                  </div>
+
+
                 <!-- PIS -->
                 <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
                   <input formControlName="pis" class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm"
