--- a/src/app/sistema/expedicao/lista-pedidos/lista-pedidos.component.html
+++ b/src/app/sistema/expedicao/lista-pedidos/lista-pedidos.component.html
@@ -37,7 +37,7 @@
                     <label class="ms-2 mt-3 small text-truncate text-custom-dark">Vendedor</label>
                   </div>
                   <div class="col-3 px-2 pt-4 p-0 m-0 form-floating">
-                    <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="" value="{{umPedido.data | date}}" readonly>
+                    <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="" value="{{umPedido.data | date}}">
                     <label class="ms-2 mt-3 small text-truncate text-custom-dark">Data de Entrega</label>
                   </div>
                 </div>
@@ -100,10 +100,32 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <form [formGroup]="emabrqueForm" (ngSubmit)="addEmbarque(emabrqueForm)">
+        <div class="d-flex m-2 py-2">
+          <div class="col-3 px-2 pt-4 p-0 m-0 form-floating">
+            <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Placa" autocomplete="off" formControlName="sign" id="sign" (keyup)="filtrarVeiculo($event)" (click)="show=false">
+            <label class="ms-2 mt-3 small text-truncate text-custom-dark">Placa</label>
+            <div *ngIf="showSign===true" class="search-sugestion mx-1 rounded-15 shadow-sm col-11 form-flaoting position-absolute ">
+              <ul class="drivers-list list-unstyled">
+                <li class="p-1 px-2 user-select-none" *ngFor="let veiculo of veiculos" (click)="selectThisVeiculo(veiculo.placa)">{{ veiculo.placa }}</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="row m-2 py-2">
+          <div class="col-3 px-2 pt-4 p-0 m-0 form-floating">
+            <input class="w-100 form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Nome do Motorista" autocomplete="off" formControlName="driver" id="driver" (keyup)="filtrarMotorista($event)" (click)="showSign=false">
+            <label class="ms-2 mt-3 small text-truncate text-custom-dark">Nome do Motorista</label>
+            <div *ngIf="show===true" class="search-sugestion mx-1 rounded-15 shadow-sm col-11 form-flaoting position-absolute ">
+              <ul class="drivers-list list-unstyled">
+                <li class="p-1 px-2 user-select-none" *ngFor="let motorista of motoristas" (click)="selectThis(motorista.name, motorista.surname)">{{motorista.name}} {{motorista.surname}}</li>
+              </ul>
+            </div>
+          </div>
+        </div>
         <div class="row">
           <div class="row m-2 py-2">
             <div class="col-3 px-2 pt-4 p-0 m-0 form-floating">
-              <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="" formControlName="numero">
+              <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="" formControlName="numero" (click)="showSign=false" (click)="show=false">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Número</label>
             </div>
             <div class="col-1 px-2 pt-4 m-0 text-center d-flex align-items-center">
@@ -111,18 +133,6 @@
                 <i class="submit-buton button-modal bi bi-plus-circle-fill icon-view my-auto fs-3 d-flex align-items-center justify-content-center h-100 w-100 p-0 m-0 fw-bold color-dark"></i>
               </button>
             </div>
-          </div>
-        </div>
-        <div class="d-flex m-2 py-2">
-          <div class="col-3 px-2 pt-4 p-0 m-0 form-floating">
-            <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="" formControlName="sign" id="sign">
-            <label class="ms-2 mt-3 small text-truncate text-custom-dark">Placa</label>
-          </div>
-        </div>
-        <div class="row m-2 py-2">
-          <div class="col-3 px-2 pt-4 p-0 m-0 form-floating">
-            <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="" formControlName="driver" id="driver">
-            <label class="ms-2 mt-3 small text-truncate text-custom-dark">Nome do Motorista</label>
           </div>
         </div>
         <div class="row m-2 py-2">
@@ -157,7 +167,7 @@
         </div>
         <div class="row mx-5 d-flex justify-content-end">
           <div class="col-2 mx-3 px-2 p-0 m-0 d-grid">
-            <button type="submit" class="h-limited btn rounded-15 py-1 px-4 bg-custom-success d-flex justify-content-between shadow-sm">
+            <button type="submit" class="h-limited btn rounded-15 py-1 px-4 bg-custom-success d-flex justify-content-between shadow-sm" data-bs-dismiss="modal" aria-label="Close">
               <h5 class="fw-normal my-auto text-truncate text-custom-dark">Finalizar Embarque</h5>
             </button>
           </div>
@@ -308,7 +318,7 @@
 
       <div class="row m-0 mt-4 py-3 border-bottom">
         <div class="col-12 m-0 p-0 text-custom-dark text-center">
-          <h2>Lista de pedidos</h2>
+          <h2>Lista e embarque</h2>
         </div>
       </div>
 
@@ -326,6 +336,11 @@
       </div>
 
       <div *ngIf="estoqueSection == 'pedidos'">
+        <div class="row m-0 mt-4 py-3">
+          <div class="col-12 m-0 p-0 text-custom-dark text-center">
+            <h3>Lista de pedidos</h3>
+          </div>
+        </div>
         <div class="row mt-4">
           <div class="col-6 px-2 p-0 m-0 position-relative">
             <input type="text" placeholder="Pesquisar" class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" (keyup)="filtrar($event)">
@@ -361,6 +376,11 @@
       </div>
 
       <div *ngIf="estoqueSection == 'embarque'">
+        <div class="row m-0 mt-4 py-3">
+          <div class="col-12 m-0 p-0 text-custom-dark text-center">
+            <h3>Embarque</h3>
+          </div>
+        </div>
         <div class="row col-12 justify-content-end d-grid px-2 p-0 m-0">
           <button type="button"
             class="btn rounded-15 py-3 px-4 bg-custom-success h-limited d-flex justify-content-between shadow-sm"
@@ -372,6 +392,7 @@
           <table class="col-12 mt-4">
             <thead class="header_table col-12">
                 <tr>
+                  <td class="lead text-center fw-bold">Nº de Embarque</td>
                   <td class="lead text-center fw-bold">Placa</td>
                   <td class="lead text-center fw-bold">Motorista</td>
                   <td class="lead text-center fw-bold">Pedidos</td>
@@ -380,10 +401,11 @@
             </thead>
             <tbody class="body_table">
                 <tr class="mt-2" *ngFor="let embarque of embarques">
+                  <td class="lead rounded-start text-center fw-bold">{{embarque.id}}</td>
                   <td class="lead rounded-start text-center fw-bold">{{embarque.sign}}</td>
                   <td class="lead rounded-start text-center fw-bold">{{embarque.driver}}</td>
                   <td class="lead rounded-start text-center fw-bold row text-truncate justify-content-center">
-                    <button class="col-4 btn rounded-15 py-1 px-4 bg-custom-success d-flex justify-content-center shadow-sm" data-bs-toggle="modal" data-bs-target="#pedidosEmbarque" (click)="findPedidos(embarque.id)">
+                    <button class="col-6 btn rounded-15 py-1 px-4 bg-custom-success d-flex justify-content-center shadow-sm" data-bs-toggle="modal" data-bs-target="#pedidosEmbarque" (click)="findPedidos(embarque.id)">
                       <h5 class="fw-normal my-auto text-truncate text-custom-dark">Vizualizar</h5>
                     </button>
                   </td>
