--- a/src/app/sistema/rh/cadastrar-colaborador/cadastrar-colaborador.component.html
+++ b/src/app/sistema/rh/cadastrar-colaborador/cadastrar-colaborador.component.html
@@ -679,8 +679,8 @@
         </div>
 
         <div *ngIf="estoqueSection == 'uniforme'">
-            <div class="row m-0 mt-4 justify-content-center border-bottom rh-form">
-                <div class="col-12 d-flex justify-content-center">
+            <div class="row m-0 mt-4 justify-content-start border-bottom rh-form">
+                <div class="col-12 d-flex justify-content-start">
 
                     <!-- Tamnho da camiseta -->
                     <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
@@ -706,7 +706,7 @@
 
                   </div>
 
-                  <div class="col-12 d-flex justify-content-center">
+                  <div class="col-12 d-flex justify-content-start">
 
                     <!-- tamanho da calça -->
                     <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
@@ -734,7 +734,7 @@
 
                   </div>
 
-                  <div class="col-12 d-flex justify-content-center">
+                  <div class="col-12 d-flex justify-content-start">
 
                     <!-- Tamanho do sapato -->
                     <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
@@ -766,7 +766,7 @@
 
                   </div>
 
-                  <div class="col-12 d-flex justify-content-center">
+                  <div class="col-12 d-flex justify-content-start">
 
                     <!-- Tamanho do cinta -->
                     <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
@@ -792,7 +792,7 @@
 
                   </div>
 
-                  <div class="col-12 d-flex justify-content-center">
+                  <div class="col-12 d-flex justify-content-start">
 
                     <!-- Tamanho do luva -->
                     <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
@@ -817,7 +817,7 @@
 
                   </div>
 
-                  <div class="col-12 d-flex justify-content-center">
+                  <div class="col-12 d-flex justify-content-start">
 
                     <!-- Tamanho do jaqueta -->
                     <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
@@ -843,7 +843,7 @@
 
                 </div>
 
-                <div class="col-12 d-flex justify-content-center">
+                <div class="col-12 d-flex justify-content-start">
 
                   <!-- Tamanho do jaqueta -->
                   <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
@@ -875,7 +875,7 @@
                   <div class="col-12 px-2 pt-4 p-0 m-0 form-floating d-flex flex-column justify-content-between align-items-end">
                     <div class="row col-12 justify-content-start" *ngFor="let anex of anexes">
                       <a [href]="anexesRepo + anex.fileName" target="_blank"
-                        class="my-3 btn rounded-15 py-3 px-4 pl-2 bg-warning d-flex justify-content-between shadow-sm col-4">
+                        class="col-5 my-3 btn rounded-15 py-3 px-4 pl-2 bg-warning d-flex justify-content-between shadow-sm col-4">
                         <h5 class="fw-normal my-auto text-truncate text-custom-dark ">{{ anex.originalName }}</h5>
                         <div class="d-flex">
                           <i (click)="deleteAnex($event, anex)" class="bi-trash-fill my-auto fs-2 p-0 m-0 fw-bold text-custom-dark "></i>
