--- a/src/app/sistema/rh/editar-colaborador/editar-colaborador.component.html
+++ b/src/app/sistema/rh/editar-colaborador/editar-colaborador.component.html
@@ -685,7 +685,7 @@
 
         <div *ngIf="estoqueSection == 'uniforme'">
             <div class="row m-0 mt-4 justify-content-center border-bottom rh-form">
-                <div class="col-12 d-flex justify-content-center">
+                <div class="col-12 d-flex justify-content-start">
 
                     <!-- Tamnho da camiseta -->
                     <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
@@ -711,7 +711,7 @@
 
                   </div>
 
-                  <div class="col-12 d-flex justify-content-center">
+                  <div class="col-12 d-flex justify-content-start">
 
                     <!-- tamanho da calça -->
                     <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
@@ -737,7 +737,7 @@
 
                   </div>
 
-                  <div class="col-12 d-flex justify-content-center">
+                  <div class="col-12 d-flex justify-content-start">
 
                     <!-- Tamanho do sapato -->
                     <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
@@ -769,7 +769,7 @@
 
                   </div>
 
-                  <div class="col-12 d-flex justify-content-center">
+                  <div class="col-12 d-flex justify-content-start">
 
                     <!-- Tamanho do cinto -->
                     <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
@@ -794,7 +794,7 @@
 
                   </div>
 
-                  <div class="col-12 d-flex justify-content-center">
+                  <div class="col-12 d-flex justify-content-start">
 
                     <!-- Tamanho do luva -->
                     <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
@@ -818,7 +818,7 @@
 
                   </div>
 
-                  <div class="col-12 d-flex justify-content-center">
+                  <div class="col-12 d-flex justify-content-start">
 
                     <!-- Tamanho do jaqueta -->
                     <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
@@ -844,7 +844,7 @@
 
                 </div>
 
-                <div class="col-12 d-flex justify-content-center">
+                <div class="col-12 d-flex justify-content-start">
 
                   <!-- Tamanho do jaqueta -->
                   <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
@@ -876,7 +876,7 @@
                   <div class="col-12 px-2 pt-4 p-0 m-0 form-floating d-flex flex-column justify-content-between align-items-end">
                     <div class="row col-12 justify-content-start" *ngFor="let anex of anexes">
                       <a [href]="anexesRepo + anex.fileName" target="_blank"
-                        class="my-3 btn rounded-15 py-3 px-4 pl-2 bg-warning d-flex justify-content-between shadow-sm col-4">
+                        class="col-5 my-3 btn rounded-15 py-3 px-4 pl-2 bg-warning d-flex justify-content-between shadow-sm col-4">
                         <h5 class="fw-normal my-auto text-truncate text-custom-dark ">{{ anex.originalName }}</h5>
                         <div class="d-flex">
                           <i (click)="deleteAnex($event, anex)" class="bi-trash-fill my-auto fs-2 p-0 m-0 fw-bold text-custom-dark "></i>
