--- a/src/app/sistema/vendas/pedidos-vendas/criar-pedido-vendas/criar-pedido-vendas.component.html
+++ b/src/app/sistema/vendas/pedidos-vendas/criar-pedido-vendas/criar-pedido-vendas.component.html
@@ -1,3 +1,96 @@
+<!-- Modal -->
+<!-- Selecionar produtos -->
+<div class="modal fade" id="selecionarProdutos" tabindex="-1" aria-labelledby="selecionarProdutosLabel" aria-hidden="true">
+  <div class="modal-dialog modal-xl">
+    <form>
+      <!-- Modal content -->
+      <div class="modal-content rounded-15 bg-custom-light">
+        <div class="modal-header px-4">
+          <h5 class="modal-title text-custom-dark" id="selecionarProdutosLabel">Selecionar produtos</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body px-4">
+
+          <div class="row m-0 justify-content-start align-items-center">
+            <!-- Pesquisar -->
+            <div class="col-3 px-2 p-0 m-0 position-relative">
+              <input class="form-control form-control-lg border-0 h-limited py-2 ps-4 pe-5 rounded-15 shadow-sm" type="text" placeholder="Pesquisar" (keyup)="filtrar($event)">
+              <a>
+                <i class="bi-search fs-4 position-absolute translate-middle top-50 me-4 end-0"></i>
+              </a>
+            </div>
+          </div>
+
+          <!-- Títulos da Tabela -->
+          <div class="row m-0 my-5 text-custom-dark justify-content-between">
+            <div class="col-1">
+            </div>
+            <div class="col-1">
+              <h5 class="fw-bold">Código</h5>
+            </div>
+            <div class="col-3">
+              <h5 class="fw-bold">Produto</h5>
+            </div>
+            <div class="col-2">
+              <h5 class="fw-bold">Estoque</h5>
+            </div>
+            <div class="col-2">
+              <h5 class="fw-bold">Custo</h5>
+            </div>
+            <div class="col-2">
+              <h5 class="fw-bold">Venda</h5>
+            </div>
+            <div class="col-1">
+              <h5 class="fw-bold">Margem</h5>
+            </div>
+          </div>
+
+          <!-- Tabela -->
+          <label *ngFor="let produto of allProdutos" class="row m-0 mt-3 border-bottom text-custom-dark justify-content-between" [for]="produto.id">
+            <div class="col-1">
+              <div class="form-check" *ngIf="check(produto.id)">
+                <input class="form-check-input" type="checkbox" [value]="produto.id" [id]="produto.id" (click)="checkIfChecked($event)" checked>
+              </div>
+              <div class="form-check" *ngIf="!check(produto.id)">
+                <input class="form-check-input" type="checkbox" [value]="produto.id" [id]="produto.id" (click)="checkIfChecked($event)">
+              </div>
+            </div>
+            <div class="col-1">
+              <p>{{ produto.id }}</p>
+            </div>
+            <div class="col-3">
+              <p>{{ produto.nome }}</p>
+            </div>
+            <div class="col-2">
+              <p>{{ produto.atual }} un.</p>
+            </div>
+            <div class="col-2">
+              <p>{{ produto.custoMedio | currency:'BRL' }} un.</p>
+            </div>
+            <div class="col-2">
+              <p>{{ produto.precoMedio | currency:'BRL' }} un.</p>
+            </div>
+            <div class="col-1">
+              <p>{{ produto.margemLucro }}%</p>
+            </div>
+          </label>
+
+        </div>
+
+        <!-- Modal footer -->
+        <div class="row m-0 py-3 modal-footer">
+
+        </div>
+        <!-- /Modal footer -->
+
+      </div>
+      <!-- /Modal content -->
+    </form>
+
+  </div>
+</div>
+
+
 <app-navbar></app-navbar>
 
 <div class="row p-0 m-0">
@@ -149,32 +242,32 @@
           <table class="table text-custom-dark">
             <thead>
               <tr>
-                <th scope="col">Cód.</th>
-                <th scope="col">Produto</th>
-                <th scope="col">Quantidade</th>
-                <th scope="col">Valor unitário</th>
-                <th scope="col">Desconto tabela</th>
-                <th scope="col">Desconto adicional</th>
-                <th scope="col">Valor venda</th>
-                <th scope="col">Tipo de retirada</th>
-                <th scope="col">Data prev. da retirada</th>
-                <th scope="col">Endereço</th>
-                <th scope="col">Valor Frete</th>
+                <th scope="col-1">Cód.</th>
+                <th scope="col-1">Produto</th>
+                <th scope="col-1">Quantidade</th>
+                <th scope="col-1">Valor unitário</th>
+                <th scope="col-1">Desconto tabela</th>
+                <th scope="col-1">Desconto adicional</th>
+                <th scope="col-1">Valor venda</th>
+                <th scope="col-1">Tipo de retirada</th>
+                <th scope="col-1">Data prev. da retirada</th>
+                <th scope="col-1">Endereço</th>
+                <th scope="col-1">Valor Frete</th>
               </tr>
             </thead>
-            <tbody formArrayName="item">
-              <tr [formGroupName]="i" *ngFor="let oneItem of itens; let i = index">
-                <th scope="row">{{ oneItem.codigo }}</th>
-                <td>{{ oneItem.produto }}</td>
+            <tbody *ngFor="let oneItem of item['controls']; let i = index" formArrayName="item">
+              <tr [formGroupName]="i" >
+                <th scope="row">{{ oneItem.value.codigo }}</th>
+                <td>{{ oneItem.value.produto }}</td>
                 <td>
-                  <input class="form-control form-control-sm" type="number" placeholder="Quantidade" fromControlName="quantidade" (keyup)="evento($event)">
+                  <input class="form-control form-control-sm" type="number" placeholder="auantidade" formControlName="quantidade" (keyup)="totalQuanti(this.item.value)">
                 </td>
-                <td>{{ oneItem.valor_unitario | currency:'BRL'}}</td>
-                <td>{{ oneItem.desconto_tab | currency:'BRL'}}</td>
+                <td>{{ oneItem.value.valorUnitario | currency:'BRL'}}</td>
+                <td>{{ oneItem.value.desconto_tab | currency:'BRL'}}</td>
                 <td>
-                  <input currencyMask class="form-control form-control-sm" type="text" placeholder="R$" formControlName="desconto">
+                  <input currencyMask placeholder="R$" class="form-control form-control-sm" type="text" formControlName="desconto" (keyup)="changeDesconto(this.item.value)">
                 </td>
-                <td>{{ oneItem.valor_venda | currency:'BRL' }}</td>
+                <td>{{ oneItem.value.valorVenda | currency:'BRL' }}</td>
                 <td>
                   <select class="form-select form-select-sm" formControlName="tipoRetirada">
                     <option value="" disabled selected>Selecionar...</option>
@@ -195,7 +288,7 @@
                   </select>
                 </td>
                 <td>
-                  <input currencyMask class="form-control form-control-sm" type="text" placeholder="R$" formControlName="valorFrete">
+                  <input currencyMask class="form-control form-control-sm" type="text" placeholder="R$" formControlName="valorFrete" (keyup)="changeFrete(this.item.value)">
                 </td>
               </tr>
             </tbody>
@@ -274,25 +367,25 @@
             <!-- Tabela resumo -->
             <div font="montserrat" class="row m-0 mt-2 border-bottom text-light justify-content-center align-items-center">
               <div class="col-1 text-center">
-                <p>{{ resumo.produtos }}</p>
+                <p>{{ item.value.length }}</p>
               </div>
               <div class="col-1 text-center">
-                <p>{{ resumo.unidades }}</p>
+                <p>{{ totalQuanti(item.value) }}</p>
               </div>
               <div class="col-2 text-center">
-                <p>{{ resumo.subtotal | currency:'BRL' }}</p>
+                <p>{{ totalQuanti(item.value)*valUnit | currency:'BRL' }}</p>
               </div>
               <div class="col-2 text-center">
-                <p>{{ resumo.descontos | currency:'BRL' }}</p>
+                <p>{{ changeDesconto(item.value) | currency:'BRL' }}</p>
               </div>
               <div class="col-2 text-center">
-                <p>{{ resumo.venda | currency:'BRL' }}</p>
+                <p>{{ (totalQuanti(item.value)*valUnit) - changeDesconto(item.value) | currency:'BRL' }}</p>
               </div>
               <div class="col-2 text-center">
-                <p>{{ resumo.frete | currency:'BRL' }}</p>
+                <p>{{ changeFrete(item.value) | currency:'BRL' }}</p>
               </div>
               <div class="col text-center">
-                <p>{{ resumo.total | currency:'BRL' }}</p>
+                <p>{{ (((totalQuanti(item.value)*valUnit) - changeDesconto(item.value)) + changeFrete(item.value)) | currency:'BRL' }}</p>
               </div>
             </div>
 
@@ -332,8 +425,8 @@
           <!-- Status -->
           <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
             <select class="form-select form-select-lg h-limited px-4 py-3 rounded-15 shadow-sm text-custom-dark" type="text" placeholder="Meio de pagamento" formControlName="status">
-              <option value="aguardando" selected>Aguardando pagamento</option>
-              <option value="realizado">Realizado</option>
+              <option value="aguardando" selected disabled>Status</option>
+              <option *ngFor="let oneStatus of status" value="{{oneStatus.name}}">{{oneStatus.name}}</option>
             </select>
             <label class="ms-2 mt-3 small text-truncate text-custom-dark">Status</label>
           </div>
@@ -399,5 +492,3 @@
     </div>
   </div>
 </div>
-
-<app-selecionar-produtos-modal></app-selecionar-produtos-modal>
