--- a/src/app/sistema/expedicao/lista-pedidos/lista-pedidos.component.scss
+++ b/src/app/sistema/expedicao/lista-pedidos/lista-pedidos.component.scss
@@ -66,3 +66,27 @@ div.modalEbarque{
 .drivers-list li:hover{
   background: #f0f0f0;
 }
+
+.noActiveButton{
+  background: #999999;
+}
+
+.noActiveButton:hover{
+  background: #999999;
+}
+
+.pdf-preview{
+  width: 600px;
+  min-height: 800px;
+}
+.tabela{
+  width: 580px;
+}
+
+.table-content{
+  font-size: 10px;
+}
+
+div.options{
+  height: 300px;
+}
