--- a/src/app/sistema/vendas/pedidos-vendas/editar-pedido/editar-pedido.component.html
+++ b/src/app/sistema/vendas/pedidos-vendas/editar-pedido/editar-pedido.component.html
@@ -496,8 +496,8 @@
             <div class="pt-4 px-2 form-floating">
               <select #condicao (change)="log(condicao)" class="form-select form-select-lg h-limited px-4 py-3 rounded-15 shadow-sm text-custom-dark" type="text" placeholder="Condição de pagamento" formControlName="condPagamento">
                 <option value="" disabled selected>Selecione uma condição</option>
-                <option value="Loja 1">À vista</option>
-                <option value="Loja 2">Parcelado</option>
+                <option value="À vista">À vista</option>
+                <option value="Parcelado">Parcelado</option>
                 <option value="personalizado">Personalizado</option>
               </select>
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Selecione a condição de pagamento</label>
@@ -587,12 +587,12 @@
         <div class="row mt-3 py-3 pb-5">
 
           <!-- Botão Cancelar -->
-          <!-- <div class="col-3 px-2 p-0 m-0 d-grid">
+          <div class="col-3 px-2 p-0 m-0 d-grid">
             <button type="button" class="h-limited btn rounded-15 py-1 px-4 btn-outline-secondary d-flex justify-content-between shadow-sm">
               <h5 class="fw-normal my-auto text-truncate">Cancelar</h5>
               <i class="bi-x my-auto fs-2 p-0 m-0 fw-bold"></i>
             </button>
-          </div> -->
+          </div>
 
           <!-- Botão Gerar pedido -->
           <div class="col-3 px-2 p-0 m-0 d-grid">
