--- a/src/app/sistema/rh/controle-vt/relatorio-vt/relatorio-vt.component.html
+++ b/src/app/sistema/rh/controle-vt/relatorio-vt/relatorio-vt.component.html
@@ -37,7 +37,7 @@
                         <tr>
                             <td class="table-content text-custom-dark border border-custom-dark border-1 fw-normal">{{oneColab.name}}</td>
                             <td class="table-content text-custom-dark border border-custom-dark border-1 fw-normal">{{oneColab.workDays}}</td>
-                            <td class="table-content text-custom-dark border border-custom-dark border-1 fw-normal text-truncate">{{oneColab.total}}</td>
+                            <td class="table-content text-custom-dark border border-custom-dark border-1 fw-normal text-truncate">{{oneColab.total | currency:'BRL'}}</td>
                         </tr>
                     </tbody>
                 </table>
