--- a/src/app/sistema/vendas/clientes/listar-clientes/listar-clientes.component.html
+++ b/src/app/sistema/vendas/clientes/listar-clientes/listar-clientes.component.html
@@ -46,13 +46,13 @@
         </div>
         <div class="col text-end">
           <h5 class="fw-bold text-truncate d-none">Ações</h5>
-          <button class="button-modal fs-5 bi-search icon-search px-2 py-1 mx-2 bg-white shadow-sm rounded-5" cursor="pointer" data-bs-toggle="modal" data-bs-target="#pesquisarCliente"></button>
-          <i class="fs-5 bi-funnel icon-filter px-2 py-1 mx-2 bg-white shadow-sm rounded-5" cursor="pointer"></i>
+          <i class="button-modal fs-5 bi-search icon-search px-2 py-1 mx-2 bg-white shadow-sm rounded-5" cursor="pointer" data-bs-toggle="modal" data-bs-target="#pesquisarCliente"></i>
+          <i class="fs-5 bi-funnel icon-filter px-2 py-1 mx-2 bg-white shadow-sm rounded-5" cursor="pointer" data-bs-toggle="modal" data-bs-target="#filtrarClientes"></i>
         </div>
       </div>
 
       <!-- Tabela -->
-      <div class="row m-0 mt-3 border-bottom text-custom-dark justify-content-center align-items-center" *ngFor="let cliente of clientes">
+      <div class="row m-0 mt-3 border-bottom text-custom-dark justify-content-center align-items-center" *ngFor="let cliente of atualPage">
         <div class="row m-0 mt-3 border-bottom text-custom-dark justify-content-center align-items-center" *ngIf="typeClient(cliente)=='fisica'">
           <div class="col-1">
             <p>{{ cliente.id }}</p>
@@ -92,8 +92,25 @@
           </div>
       </div>
         </div>
+      
+        <div class="col-12 row mt-3 d-flex justify-content-around">
+          <div class="col-3 row m-auto">
+            <button class="rounded-15 py-1 px-4 bg-custom-dark h-100 d-flex justify-content-between shadow-sm border-0" (click)="anterior()" [class.noActiveButton]="this.atualPageNumber == 0">
+              <h5 class="w-100 fw-normal my-auto text-truncate text-white text-center">Anterior</h5>
+            </button>
+          </div>
+          <div class="col-1 d-flex justify-content-end">
+            <p class="h3 fw-normal text-custom-dark">{{atualPageNumber + 1}}/{{pagesNumber}}</p>
+          </div>
+          <div class="col-3 row m-auto">
+            <button class="rounded-15 py-1 px-4 bg-custom-dark h-100 d-flex justify-content-between shadow-s border-0" (click)="proximo()" [class.noActiveButton]="this.atualPageNumber == (pagesNumber - 1)">
+              <h5 class="w-100 fw-normal my-auto text-truncate text-white text-center">Proximo</h5>
+            </button>
+          </div>
+        </div> 
 
     </div>
   </div>
 </div>
 <app-pesquisar-cliente></app-pesquisar-cliente>
+<app-filtrar-clientes></app-filtrar-clientes>
