--- a/src/app/sistema/vendas/pedidos-vendas/criar-pedido-vendas/criar-pedido-vendas.component.html
+++ b/src/app/sistema/vendas/pedidos-vendas/criar-pedido-vendas/criar-pedido-vendas.component.html
@@ -8,24 +8,25 @@
           <h2 class="modal-title text-custom-dark" id="pesquisarClienteLabel">Senha</h2>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-        <div class="col-12 modal-body px-5 d-flex justify-content-center">  
-          <div class="d-flex justify-content-center"  id="content">
-            <div class="px-2 pt-4 p-0 m-0 form-floating">
-              <input class="col-12 form-control form-control-lg h-limited px-4 py-4 rounded-15 shadow-sm" type="password" placeholder="Senha" fromControlName="linkNf">
-              <label class="ms-2 mt-3 small text-truncate text-custom-dark">Senha</label>
+        <form [formGroup]="passwordForm">
+          <div class="col-12 modal-body px-5 d-flex justify-content-center">  
+            <div class="d-flex justify-content-center"  id="content">
+              <div class="px-2 pt-4 p-0 m-0 form-floating">
+                <input class="col-12 form-control form-control-lg h-limited px-4 py-4 rounded-15 shadow-sm" type="password" placeholder="Senha" formControlName="password">
+                <label class="ms-2 mt-3 small text-truncate text-custom-dark">Senha</label>
+              </div>
             </div>
           </div>
-        </div>
-        <!-- Modal footer -->
-        <div class="row m-0 py-3 modal-footer">
-            <div class="col-3 px-2 p-0 m-0 mx-5">
-                <button data-bs-dismiss="modal" type="submit"
-                class="h-limited-sm btn rounded-15 py-1 px-4 bg-success shadow-sm text-start">
-                <h5 class="fw-normal my-auto text-truncate text-custom-dark">Confirmar</h5>
-                </button>
-            </div>
-
-        </div>
+          <!-- Modal footer -->
+          <div class="row m-0 py-3 modal-footer">
+              <div class="col-3 px-2 p-0 m-0 mx-5">
+                  <button data-bs-dismiss="modal" type="submit"
+                  class="h-limited-sm btn rounded-15 py-1 px-4 bg-success shadow-sm text-start" (click)="gerarPedido(passwordForm, pedidosForm)">
+                  <h5 class="fw-normal my-auto text-truncate text-custom-dark">Confirmar</h5>
+                  </button>
+              </div>
+          </div>
+        </form>
         <!-- /Modal footer -->
 
       </div>
