--- a/src/app/sistema/vendas/clientes/listar-clientes/listar-clientes.component.scss
+++ b/src/app/sistema/vendas/clientes/listar-clientes/listar-clientes.component.scss
@@ -1,3 +1,11 @@
 button.button-modal{
     border: none;
 }
+
+.noActiveButton{
+    background: #999999;
+}
+
+.noActiveButton:hover{
+    background: #999999;
+}
