--- a/src/app/sistema/estoque/fornecedores/view-fornecedor/view-fornecedor.component.html
+++ b/src/app/sistema/estoque/fornecedores/view-fornecedor/view-fornecedor.component.html
@@ -1,4 +1,4 @@
-<div class="modal fade" id="viewFornecedor" tabindex="-1" aria-labelledby="adicionarFornecedorLabel" aria-hidden="true">
+<div class="modal fade" id="viewFornecedor" tabindex="-1" aria-labelledby="viewFornecedorLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl">
         <div class="modal-content rounded-15 bg-custom-light">
             <form [formGroup]="fornecedorForm">
