--- a/src/app/sistema/estoque/suprimentos/adicionar-suprimentos/adicionar-suprimentos.component.html
+++ b/src/app/sistema/estoque/suprimentos/adicionar-suprimentos/adicionar-suprimentos.component.html
@@ -67,7 +67,7 @@
           <div class="row m-0 p-0">
             <!-- Unidade de medida -->
             <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-              <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Unidade de medida" formControlName="unidadeMedida">
+              <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="number" placeholder="Unidade de medida" formControlName="unidadeMedida">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Unidade de medida</label>
             </div>
 
